--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
     "nettrine/dbal": "^0.8.0",
     "nettrine/cache": "^0.3.0",
     "nettrine/migrations": "^0.9.1",
-    "nettrine/fixtures": "^0.8.0"
+    "nettrine/fixtures": "^0.8.0",
+    "ublaboo/datagrid": "^6.10",
+    "contributte/forms-bootstrap": "^0.8.1"
   },
   "require-dev": {
     "contributte/qa": "^0.3",
