--- a/.github/workflows/database-schema-check.yml
+++ b/.github/workflows/database-schema-check.yml
@@ -22,14 +22,17 @@ jobs:
                   php-version: '8.1'  # Upravte podle verze PHP, kterou používáte
                   extensions: pdo_mysql
 
-            - name: Start MariaDB
-              uses: mirromutth/mysql-action@v1
+            - uses: getong/mariadb-action@v1.11
               with:
-                  mysql version: '11.0'  # Specifikujte verzi MariaDB
-                  mysql database: contributte
-                  mysql user: contributte
-                  mysql password: contributte
-                  mysql root password: contributte
+                  host port: 3306 # Optional, default value is 3306. The port of host
+                  container port: 3306 # Optional, default value is 3306. The port of container
+                  character set server: 'utf8' # Optional, default value is 'utf8mb4'. The '--character-set-server' option for mysqld
+                  collation server: 'utf8_general_ci' # Optional, default value is 'utf8mb4_general_ci'. The '--collation-server' option for mysqld
+                  mariadb version: '10.4.10' # Optional, default value is "latest". The version of the MariaDB
+                  mysql database: 'contributte' # Optional, default value is "test". The specified database which will be create
+                  mysql root password: 'contributte' # Required if "mysql user" is empty, default is empty. The root superuser password
+                  mysql user: 'contributte' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
+                  mysql password: 'contributte' # Required if "mysql user" exists. The password for the "mysql user"
 
             - name: Install Composer dependencies
               run: composer install
