Zobrazování formuláře Konference a možnost přidat novou konferenci

--- a/config/app/services.neon
+++ b/config/app/services.neon
@@ -3,7 +3,7 @@
 services:
 	# Forms ===================
 	- App\UI\Form\FormFactory
-
+	- App\UI\Components\Conference\ConferenceFormFactory
 	# Latte ===================
 	latte.latteFactory:
 		setup:
