feat: presentation detail and edit

--- a/config/app/services.neon
+++ b/config/app/services.neon
@@ -41,7 +41,7 @@ latte:
 search:
   -	in: %appDir%
     classes:
-      - *Form
+#      - *Form
       - *Service
       - *FormFactory
       - *ListFactory
