--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -9,8 +9,11 @@ RUN sed -ri -e 's!/var/www/!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf
 RUN a2enmod rewrite
 
 RUN apt-get update
-RUN apt-get -y install lsb-release ca-certificates apt-transport-https wget git zip unzip zlib1g-dev libpng-dev
+RUN apt-get -y install libicu-dev lsb-release ca-certificates apt-transport-https wget git zip unzip zlib1g-dev libpng-dev
 
+
+RUN docker-php-ext-configure intl
+RUN docker-php-ext-install intl
 RUN docker-php-ext-install mysqli pdo pdo_mysql
 RUN docker-php-ext-install gd
 RUN docker-php-ext-enable mysqli pdo pdo_mysql gd
