--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,20 +1,78 @@
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    # RewriteBase /
+# Apache configuration file (see https://httpd.apache.org/docs/current/mod/quickreference.html)
 
-    ## Redirect from non-www na www.example.com
-    #RewriteCond %{HTTP_HOST} ^([^\.]+\.[^\.]+)$ [NC]
-    #RewriteRule ^(.*)$ http://www.%1/$1 [R=301,L]
+# Allow access to all resources by default
+Require all granted
 
-    ## Redirect from www to non-www
-    #RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-    #RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
-
-    # Prevents files starting with dot to be viewed by browser
-    RewriteRule /\.|^\.(?!well-known/) - [F]
-
-    # Front controller
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule !\.(pdf|js|ico|gif|jpg|png|css|rar|zip|tar\.gz|map)$ index.php [L]
+# Disable directory listing for security reasons
+<IfModule mod_autoindex.c>
+	Options -Indexes
 </IfModule>
+
+# Enable pretty URLs (removing the need for "index.php" in the URL)
+<IfModule mod_rewrite.c>
+	RewriteEngine On
+	
+
+
+	# Uncomment the next line if you want to set the base URL for rewrites
+	# RewriteBase /
+
+	# Force usage of HTTPS (secure connection). Uncomment if you have SSL setup.
+	# RewriteCond %{HTTPS} !on
+	# RewriteRule .? https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+
+	# Permit requests to the '.well-known' directory (used for SSL verification and more)
+	RewriteRule ^\.well-known/.* - [L]
+
+	# Block access to hidden files (starting with a dot) and URLs resembling WordPress admin paths
+	RewriteRule /\.|^\.|^wp-(login|admin|includes|content) - [F]
+
+	# Return 404 for missing files with specific extensions (images, scripts, styles, archives)
+	RewriteCond %{REQUEST_FILENAME} !-f
+	RewriteRule \.(pdf|js|mjs|ico|gif|jpg|jpeg|png|webp|avif|svg|css|rar|zip|7z|tar\.gz|map|eot|ttf|otf|woff|woff2)$ - [L]
+
+	# Front controller pattern - all requests are routed through index.php
+	RewriteCond %{REQUEST_FILENAME} !-f
+	RewriteCond %{REQUEST_FILENAME} !-d
+	RewriteRule . index.php [L]
+</IfModule>
+
+# Enable gzip compression for text files
+<IfModule mod_deflate.c>
+	AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application/javascript application/json application/xml application/rss+xml image/svg+xml
+</IfModule>
+
+RewriteEngine On
+
+# cele domeny (aliasy)
+RewriteCond %{REQUEST_URI} !^domains/
+RewriteCond %{REQUEST_URI} !^/domains/
+RewriteCond %{HTTP_HOST} ^(www.)?(.*)$
+RewriteCond %{DOCUMENT_ROOT}/domains/%2 -d
+RewriteRule (.*) domains/%2/$1 [DPI]
+
+# subdomeny (s nebo bez www na zacatku)
+RewriteCond %{REQUEST_URI} !^subdom/
+RewriteCond %{REQUEST_URI} !^/subdom/
+RewriteCond %{HTTP_HOST} ^(www.)?(.*)\.([^.]*)\.([^.]*)$
+RewriteCond %{DOCUMENT_ROOT}/subdom/%2 -d
+RewriteRule (.*) subdom/%2/$1 [DPI]
+
+# aliasy - spravne presmerovani pri chybejicim /
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^domains/[^/]+/(.+[^/])$ /$1/ [R]
+
+# subdomeny - spravne presmerovani pri chybejicim /
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^subdom/[^/]+/(.+[^/])$ /$1/ [R]
+
+# Nette Framework
+RewriteCond %{HTTP_HOST} ^(www.)?(.*).([^.]*).([^.]*)$
+RewriteCond %{DOCUMENT_ROOT}/domains/%2.%3.%4 !-d
+RewriteCond %{DOCUMENT_ROOT}/subdom/%2 !-d
+RewriteCond %{HTTP_HOST} ^(www.)?([^.]*).([^.]*){2,4}$
+RewriteCond %{REQUEST_URI} !^www/
+RewriteCond %{REQUEST_URI} !^/www/
+RewriteCond %{DOCUMENT_ROOT}/www -d
+RewriteRule (.*) www/$1 [DPI]
+# Nette Framework
